refactor: move resource files to the resource folder